unpackaged/main/default/objects/Adverse__c/Adverse__c.object-meta.xml
<CustomObject>
    <label>Adverse</label>
    <nameField>
        <label>Adverse  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Adverse</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>