unpackaged/main/default/objects/Adverse__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Adverse</relationshipLabel>
    <relationshipName>Adverse</relationshipName>
    <type>Lookup</type>
</CustomField>