unpackaged/main/default/objects/Adverse__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>genesis__Applications__c</referenceTo>
    <relationshipLabel>Adverse</relationshipLabel>
    <relationshipName>Adverse</relationshipName>
    <type>Lookup</type>
</CustomField>