unpackaged/main/default/objects/Adverse__c/fields/No_Hit__c.field-meta.xml
<CustomField>
    <fullName>No_Hit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No  Hit</label>
    <type>Checkbox</type>
</CustomField>